compilateurDeca/src/test/deca/syntax/valid/sans_objet/assign_simple.deca
// Description:
//    tests declaration
// 
// Historique:09/01/2026
{

    int x;
    x=4;
}
