compilateurDeca/src/test/deca/syntax/invalid/sans_objet/declaration.deca
//Description
//
//Teste declarations invalides
// Historique:
//    cree le 08/01/2026

{
    int x
}

